# kube-orb

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yml
docs/: USER_GUIDE.md  demo.tape
infra/: Makefile  README.md  reaper.sh  setup.sh
infra/k8s/: api-gateway.yaml  auth-service.yaml  cache.yaml  database.yaml  namespace.yaml  notification-service.yaml  scheduler.yaml  user-service.yaml  worker.yaml
infra/services/api-gateway/: app.py
infra/services/auth-service/: app.py
infra/services/cache/: app.py
infra/services/database/: app.py
infra/services/notification-service/: app.py
infra/services/scheduler/: Dockerfile  app.py
infra/services/user-service/: app.py
infra/services/worker/: app.py
scripts/: run-safe.sh
src/kube_illume/: __main__.py  cli.py  config.py  models.py
src/kube_illume/viewer/: app.py  viewer.tcss  widgets.py
src/kube_illume/viewer/panels/: main_stream.py
src/kube_illume/wizard/: app.py  screens.py
src/kube_orb/: __main__.py  _scrollbar.py  cli.py  colors.py  config.py  inject.py  jsonlog.py  kubectl.py  models.py
src/kube_orb/viewer/: app.py  viewer.tcss  widgets.py
src/kube_orb/viewer/panels/: health.py  main_stream.py  monitor.py  search.py
src/kube_orb/wizard/: app.py  screens.py  wizard.tcss
tests/: test_colors.py  test_config.py  test_health_panel.py  test_jsonlog.py  test_kubectl.py  test_scrollbar.py  test_viewer_backfill.py  test_viewer_collapse_repeats.py  test_viewer_color_mode.py  test_viewer_edit_behaviors.py  test_viewer_json_format.py  test_viewer_keybindings.py  test_viewer_monitor_context.py  test_viewer_monitor_double_click.py  test_viewer_pane_size_modal.py  test_viewer_pause_resume.py  test_viewer_resize.py  test_viewer_string_edit_modal.py  test_wizard_bdd_scenarios.py  test_wizard_screens.py
tests/features/: wizard.feature
