[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kube-orb"
version = "0.1.0"
description = "Interactive Kubernetes log viewer with TUI"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["kubernetes", "logs", "tui", "kubectl", "devtools"]
dependencies = [
    "textual>=0.61.0",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/adlidev/kube-orb"
Repository = "https://github.com/adlidev/kube-orb"
Documentation = "https://github.com/adlidev/kube-orb/blob/main/docs/USER_GUIDE.md"
Issues = "https://github.com/adlidev/kube-orb/issues"

[project.scripts]
kube-orb        = "kube_orb.cli:main"
kube-orb-inject = "kube_orb.inject:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kube_orb"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-bdd>=7.0",
    "textual-dev>=0.61.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.envs.default]
installer = "pip"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-bdd>=7.0",
    "textual-dev>=0.61.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
dev  = "textual run --dev src/kube_orb/__main__.py"
