[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kube-orb"
version = "1.0.1"
description = "Interactive terminal UI for streaming and filtering Kubernetes pod logs across multiple deployments"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Adli Waziri", email = "boulderadli@gmail.com" }
]
keywords = ["kubernetes", "k8s", "logs", "tui", "kubectl", "devops", "sre", "observability", "textual"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.61.0",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/adlidev/kube-orb"
Repository = "https://github.com/adlidev/kube-orb"
Documentation = "https://github.com/adlidev/kube-orb/blob/main/docs/USER_GUIDE.md"
Issues = "https://github.com/adlidev/kube-orb/issues"

[project.scripts]
kube-orb        = "kube_orb.cli:main"
kube-orb-inject = "kube_orb.inject:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kube_orb"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-bdd>=7.0",
    "textual-dev>=0.61.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.envs.default]
installer = "pip"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-bdd>=7.0",
    "textual-dev>=0.61.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
dev  = "textual run --dev src/kube_orb/__main__.py"
